[project]
name = "wanspeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "safetensors>=0.6.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
indent-width = 2
